# elmerfem-depr

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ElmerCPack.cmake  README.txt  notes.txt
.github/workflows/: lumi-build.yaml
ElmerGUI/: CMakeLists.txt
ElmerGUI/Application/: CMakeLists.txt
ElmerGUI/Application/src/: egini.cpp  mainwindow.cpp  materiallibrary.cpp
ElmerGUI/matc/: CMakeLists.txt
ElmerGUI/netgen/: CMakeLists.txt
buildtools/: Dockerfile-test
ci/: Dockerfile-build  Dockerfile-test
cmake/: buildopts_debian.cmake
cmake/Modules/: FindPCRE.cmake
cpack/: ElmerCPack.cmake  NSISCPack.cmake
debian/: control  rules
elmerice/Solvers/: CMakeLists.txt
elmerice/UserFunctions/: CMakeLists.txt
fem/: CMakeLists.txt  config.h.cmake
fem/src/: BlockSolve.src  CMakeLists.txt  DefUtils.F90  DirectSolve.src  ElementDescription.F90  ElmerSolver.F90  Feti.src  Integration.F90  LinearForms.F90  Lists.F90  Load.c  LoadMod.F90  MainUtils.src  MeshUtils.F90  Messages.F90  PCRE_Fortran_iface.c  RadiationFactors.src  RegExpUtils.F90  Types.F90  ZirkaHysteresis.F90  elmerf90.in.cmake
fem/src/binio/: CMakeLists.txt
fem/src/modules/: AVSolver.F90  CMakeLists.txt  CoordinateTransform.F90  MagnetoDynamics2D.F90  VectorHelmholtz.F90
fem/src/modules/MagnetoDynamics/: PlatiseFerroModel.F90  WhitneyAVSolver.F90
fem/src/modules/SaveData/: SaveLine.F90
fem/tests/: CMakeLists.txt  test_macros.cmake
fem/tests/ElasticBeamRestart/: restart.sif
fem/tests/ModelFun/: ModelFun.F90  case.sif
fem/tests/ModelPDEevol/: CMakeLists.txt  ModelPDEevol.F90
fem/tests/ParticleAdvector2/: case.sif
fem/tests/Regexp/: CMakeLists.txt  ELMERSOLVER_STARTINFO  regexp.F90  regexp.sif
fem/tests/RotatingBCPoisson3DGeneric/: case.sif
fem/tests/ThermalActuator/: thermal_actuator.sif
fem/tests/Zirka/: CMakeLists.txt  ZirkaTest.F90  case.sif
fem/tests/circuits2D_transient_stranded/sif/: 1381-components-stranded.sif
fem/tests/circuits_harmonic_foil/sif/: 6459.sif
fem/tests/circuits_harmonic_stranded_homogenization/sif/: 2241.sif
fem/tests/circuits_transient_foil/sif/: 6479.sif
fhutiter/src/: CMakeLists.txt
license_texts/: CMakeLists.txt
matc/src/: CMakeLists.txt
mathlibs/src/arpack/: CMakeLists.txt
mathlibs/src/parpack/: CMakeLists.txt
misc/pcre/: CMakeLists.txt  README_ELMER
umfpack/src/amd/: CMakeLists.txt
umfpack/src/umfpack/: CMakeLists.txt
