SET(OFF_KIND "selected_int_kind(18)")

CONFIGURE_FILE(
  "kinds.f90.in"
  "${CMAKE_CURRENT_BINARY_DIR}/kinds.f90"
  )

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/fem 
  ${CMAKE_CURRENT_BINARY_DIR})

SET(biniolib_SOURCES binio.c biniomod.f90 ${CMAKE_CURRENT_BINARY_DIR}/kinds.f90)

ADD_LIBRARY(binio SHARED ${biniolib_SOURCES})

IF(UNIX)
INSTALL(TARGETS binio LIBRARY DESTINATION ${ELMER_INSTALL_LIB_DIR})
ENDIF()

IF(WIN32)
  #INSTALL(TARGETS binio ARCHIVE DESTINATION ${ELMER_INSTALL_LIB_DIR}
    #LIBRARY DESTINATION ${ELMER_INSTALL_LIB_DIR})
    INSTALL(TARGETS binio LIBRARY DESTINATION ${ELMER_INSTALL_LIB_DIR}
      RUNTIME DESTINATION ${ELMER_INSTALL_LIB_DIR})
ENDIF()
