INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/fem/src")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/fhutiter/include")
INCLUDE(AddModules)

IF(NOT DISABLE_ELMER_MODULES)
  ADD_ELMER_MODULES(SKIP contrib)

  IF(WITH_CONTRIB)
    ADD_SUBDIRECTORY(contrib)
  ENDIF(WITH_CONTRIB)

  ADD_DEPENDENCIES(EliminatePeriodic EliminateDirichlet)
  ADD_DEPENDENCIES(FourierLoss MagnetoDynamics)
  TARGET_LINK_LIBRARIES(EliminatePeriodic EliminateDirichlet)
ENDIF(DISABLE_ELMER_MODULES)

#IF(HAVE_NETCDF)
#  TARGET_LINK_LIBRARIES(SaveGridData ${NETCDF_LIBRARY})
#  TARGET_LINK_LIBRARIES(SaveGridData ${NETCDFF_LIBRARY})
#  #TODO - add to RPath
#ENDIF()
#
#IF(HAVE_HDF5)
#  TARGET_LINK_LIBRARIES(SaveGridData ${PHDF5_LIBRARY})
#  TARGET_LINK_LIBRARIES(SaveGridData ${PHDF5HL_LIBRARY})
#  #TODO - add to RPath
#ENDIF()
